--- a/Css/style.css
+++ b/Css/style.css
@@ -89,6 +89,21 @@ footer {
   transition: width 150ms ease-in-out;
 }
 
+.botao central de ajuda:after{
+  position: absolute;
+  display: block;
+  top:4149;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  width: 0;
+  height: 100%;
+  background: #09B0E5;
+  z-index: -1;
+  -webkit-transition: width 150ms ease-in-out;
+  transition: width 150ms ease-in-out;
+}
+
 .botoes:hover {
   color: #FFFFFF;
 }
