--- a/Css/ajuda.css
+++ b/Css/ajuda.css
@@ -21,20 +21,59 @@ main p {
     margin-right: 125px;
 }
 
-.formulario {
-    display: inline-block;
-    text-align: center;
+main {
     width: 1200px;
-    height: 1240px;
-    margin: 120px 5%;
-    vertical-align: top;
-    border: 3px solid #09B0E5;
-    box-sizing: border-box;
-    border-radius: 40px;
+    margin: 0 auto;
 }
 
-.dadosformulario {
-    position: absolute;
+form {
+    margin: 40px 0;
+}
+
+form label {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 40px;
+    color: #FFFFFF;
+    margin: 115px;
+}
+
+form input {
+    width: 950px;
+    height: 55px;
+    background: #C4C4C4;
+    border-radius: 4px;
+    margin: 10px 115px 60px 115px;
+    font-size: 30px;
+    padding-left: 5px;
+}
+
+textarea{
+    width: 950px;
+    height: 165px;
+    background: #C4C4C4;
+    border-radius: 4px;
+    margin: 10px 115px 60px 115px;
+    font-size: 30px;
+    padding-left: 5px;
+}
+
+.borda-formulario{
+    display: block;
+    text-align: center;
+    width: 1200px;
+    height: 1100px;
+    margin: 120px 0;
+    vertical-align: top;
+    border: 4px solid #09B0E5;
+    box-sizing: border-box;
+    border-radius: 40px;
+    padding-top: 40px;
+}
+
+.formulario{
     font-family: Roboto;
     font-style: normal;
     font-weight: bold;
@@ -44,31 +83,15 @@ main p {
     color: #FFFFFF;
 }
 
-.quadroformulario {
-    width: 950px;
-    height: 55px;
-    background: #C4C4C4;
-    border-radius: 4px;
-    margin-left: 125px;
-}
-
-.quadro2formulario {
-    width: 950px;
-    height: 349px;
-    background: #C4C4C4;
-    border-radius: 4px;
-    margin-left: 125px;
-}
-
 .enviar {
     border-color: #09B0E5;
     border-radius: 0;
-    color: #09B0E5;
+    color:  #DFEBE6;
     position: relative;
     overflow: hidden;
     z-index: 1;
-    -webkit-transition: color 150ms ease-in-out;
-    transition: color 150ms ease-in-out;
+    -webkit-transition: color 200ms ease-in-out;
+    transition: color 200ms ease-in-out;
 }
 
 .enviar:after {
@@ -83,12 +106,13 @@ main p {
     height: 100%;
     background: #09B0E5;
     z-index: -1;
-    -webkit-transition: width 150ms ease-in-out;
-    transition: width 150ms ease-in-out;
+    -webkit-transition: width 200ms ease-in-out;
+    transition: width 200ms ease-in-out;
 }
 
 .enviar:hover {
-    color: #FFFFFF;
+    color:#DFEBE6;
+;
 }
 
 .enviar:hover:after {
@@ -96,16 +120,16 @@ main p {
 }
 
 .enviar {
-    border: 0;
-    padding: 10px;
     width: 400px;
     height: 100px;
     display: inline-block;
-    margin: 0 0 100px 470px;
+    margin: 130px 395px 130px 405px;
     cursor: pointer;
     border-radius: 4px;
     font-size: 40px;
     background-color: #1d1e1a;
+    border: 3px 3px 3px 3px;
+    border-color: #09B0E5;
 }
 
 footer {
@@ -114,6 +138,7 @@ footer {
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
+    margin-top: 200px;
 }
 
 .links {
