--- a/Css/style.css
+++ b/Css/style.css
@@ -51,7 +51,7 @@ footer {
 .botoes {
     border-color: #09B0E5;
     border-radius: 0;
-    color: #09B0E5;
+    color: #DFEBE6;
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -84,8 +84,6 @@ footer {
 }
 
 .botoes {
-    border: 0;
-    padding: 10px;
     width: 400px;
     height: 100px;
     display: inline-block;
@@ -94,6 +92,8 @@ footer {
     border-radius: 4px;
     font-size: 40px;
     background-color: #1d1e1a;
+    border: 3px 3px 3px 3px;
+    border-color: #09B0E5;
 }
 
 
