começando pagina da home

--- a/Css/style.css
+++ b/Css/style.css
@@ -16,7 +16,7 @@ body {
     top: 15px;
 }
 
-.vector {
+.home {
     position: absolute;
     left: 72.85%;
     right: 23.68%;
@@ -24,7 +24,7 @@ body {
     bottom: 22.5%;
 }
 
-.layout {
+.categorias {
     position: absolute;
     width: 47px;
     height: 48px;
@@ -32,7 +32,7 @@ body {
     top: 15px;
 }
 
-.vector2 {
+.ajuda {
     position: absolute;
     left: 86.94%;
     right: 9.58%;
