--- a/Css/ajuda.css
+++ b/Css/ajuda.css
@@ -64,7 +64,7 @@ textarea {
     display: block;
     text-align: center;
     width: 1200px;
-    height: 1100px;
+    height: 1150px;
     margin: 120px 0;
     vertical-align: top;
     border: 4px solid #09B0E5;
@@ -81,6 +81,25 @@ textarea {
     line-height: 40px;
     text-align: left;
     color: #DFEBE6;
+}
+
+fieldset {
+    border: none;
+    margin-left: 115px;
+    padding: 0;
+}
+
+select {
+    font-size: 22px;
+    width: 150px;
+    height: 30px;
+    color: #DFEBE6;
+    background: #161614;
+    cursor: pointer;
+}
+
+.aviso{
+    font-size: 20px;
 }
 
 .enviar {
@@ -138,7 +157,7 @@ footer {
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
-    margin-top: 200px;
+    margin-top: 400px;
 }
 
 .links {
