--- a/Css/categorias.css
+++ b/Css/categorias.css
@@ -1,3 +1,12 @@
+.paisagem {
+    display: block;
+    margin: 0px auto;
+    height: 585px;
+    width: 1200px;
+    left: 130px;
+    top: 256px
+}
+
 .botoes:after {
     content: '';
     position: absolute;
