--- a/Css/categorias.css
+++ b/Css/categorias.css
@@ -1,13 +1,28 @@
 .paisagem {
     display: block;
     margin: 0px auto;
+    position: absolute;
     height: 585px;
     width: 1200px;
     left: 130px;
     top: 256px
 }
 
+
+.logopaisagem {
+    position: absolute;
+    width: 96px;
+    height: 91px;
+    left: 1199px;
+    top: 299px;
+}
+
 .mentalix {
+    position: absolute;
+    width: 867px;
+    height: 270px;
+    left: 92px;
+    top: 829px;
     font-family: Roboto;
     font-style: normal;
     font-weight: normal;
@@ -44,6 +59,7 @@
 .botoes {
     width: 361px;
     height: 55px;
+    top: 1044px;
     display: inline-block;
     margin: 0 0 100px 120px;
     cursor: pointer;
