--- a/Css/categorias.css
+++ b/Css/categorias.css
@@ -34,3 +34,54 @@
     border: 3px 3px 3px 3px;
     border-color: #09B0E5;
 }
+
+#divBusca{
+  background-color:#DFEBE6;
+  border:solid 2px #09B9E5;
+  border-radius:10px;
+  width:305px;
+  height:32px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.campo{
+  float:left;
+  background-color:transparent;
+  padding-left:5px;
+  font-size:18px;
+  border:none;
+  height:32px;
+  width:191px;
+}
+
+#btnBusca{
+  border:none;
+  float:left;
+  height:32px;
+  border-radius:0 7px 7px 0;
+  width:76px;
+  font-weight:bold;
+  background:#09B9E5;
+}
+
+#divBusca img{
+  float:left;
+  height:28px;
+ width: 26px;
+ padding-left:5px;
+ padding-top: 2px;
+
+}
+
+#sugest{
+
+     background-color: transparent;
+  border-radius:12px;
+  width:auto;
+  height:auto;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+ 
