colocando botão da central de ajuda

--- a/Css/home.css
+++ b/Css/home.css
@@ -15,3 +15,54 @@
     left: 1128px;
     top: 765px;
 }
+
+.botaoajuda {
+    border-color: #09B0E5;
+    border-radius: 0;
+    color: #DFEBE6;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    -webkit-transition: color 200ms ease-in-out;
+    transition: color 200ms ease-in-out;
+}
+
+.botaoajuda:after {
+    content: '';
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 0;
+    height: 100%;
+    background: #09B0E5;
+    z-index: -1;
+    -webkit-transition: width 200ms ease-in-out;
+    transition: width 200ms ease-in-out;
+}
+
+.botaoajuda:hover {
+    color: #DFEBE6;
+    ;
+}
+
+.botaoajuda:hover:after {
+    width: 110%;
+}
+
+.botaoajuda {
+    width: 386px;
+    height: 71px;
+    top: 4149;
+    left: 527;
+    display: inline-block;
+    margin: 130px 395px 130px 405px;
+    cursor: pointer;
+    border-radius: 4px;
+    font-size: 40px;
+    background-color: #1d1e1a;
+    border: 3px 3px 3px 3px;
+    border-color: #09B0E5;
+}
