--- a/Css/home.css
+++ b/Css/home.css
@@ -1,4 +1,7 @@
 .titulo-principal {
+    position: absolute ;
+    width: 600px;
+    height: 183px;
     left: 120px;
     top: 543px;
     font-family: Roboto;
@@ -6,13 +9,13 @@
     font-weight: bold;
     font-size: 80px;
     line-height: 94px;
-    color: #DFEBE6;
 }
 
 .som-classificacao {
-    width: 241px;
+    position: absolute;
+    width: 247px;
     height: 68px;
-    left: 1128px;
+    left: 1193px;
     top: 765px;
 }
 
