--- a/Css/home.css
+++ b/Css/home.css
@@ -69,3 +69,26 @@
     border: 3px 3px 3px 3px;
     border-color: #09B0E5;
 }
+
+footer {
+    width: 1440px;
+    height: 440px;
+    text-align: center;
+    background-color: #1d1e1a;
+    padding: 40px 0;
+    margin-top: 440px;
+}
+
+.links {
+    padding: 8px 0;
+}
+
+.links img {
+    padding: 8px;
+}
+
+.copyright {
+    color: #DFEBE6;
+    font-size: 13px;
+    margin: 20px 0 0;
+}
