--- a/Css/home.css
+++ b/Css/home.css
@@ -122,9 +122,19 @@
     border-color: #09B0E5;
 }
 
+.textoajuda{
+    text-align: center;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+    }
+
 footer {
-    width: 1440px;
-    height: 440px;
+    width:100%;
+    height:100%;
+    left:0;
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
