--- a/Css/home.css
+++ b/Css/home.css
@@ -18,6 +18,46 @@
     left: 1193px;
     top: 765px;
 }
+
+.Sobre{
+    position: absolute;
+    width: 1200px;
+    height: 91px;
+    left: 120px;
+    top: 2466px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 80px;
+    line-height: 94px;
+}
+
+.sobrementalix{
+    position: absolute;
+    width: 997px;
+    height: 163px;
+    left: 120px;
+    top: 2577px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+}
+
+.time{
+    position: absolute;
+    width: 997px;
+    height: 42px;
+    left: 120px;
+    top: 2819px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 40px;
+}
 .botaocategorias {
     border-color: #09B0E5;
     border-radius: 0;
@@ -58,8 +98,8 @@
     position: absolute;
     width: 397px;
     height: 70px;
-    top: 3900px;
     left: 551px;
+    top: 2280px;
     display: inline-block;
     margin: 130px 395px 130px 405px;
     cursor: pointer;
@@ -69,6 +109,7 @@
     border: 3px 3px 3px 3px;
     border-color: #09B0E5;
 }
+
 
 
 .botaoajuda {
@@ -107,11 +148,12 @@
     width: 110%;
 }
 
-.botaoajuda {
+.botaoajuda { 
+    position: absolute;
     width: 386px;
     height: 71px;
-    top: 4149;
-    left: 527;
+    left: 150px;
+    top: 4149px;
     display: inline-block;
     margin: 130px 395px 130px 405px;
     cursor: pointer;
@@ -121,20 +163,27 @@
     border: 3px 3px 3px 3px;
     border-color: #09B0E5;
 }
-
 .textoajuda{
-    text-align: center;
+    
+    position: absolute;
+    width: 794px;
+    height: 45px;
+    left: 323px;
+    top: 4055px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 34px;
     line-height: 40px;
-    }
+    text-align: center;
+}
 
 footer {
-    width:100%;
-    height:100%;
-    left:0;
+    position: absolute;
+    width: 1440px;
+    height: 440px;
+    left: 0px;
+    top: 4292px;    
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
