--- a/Css/categorias.css
+++ b/Css/categorias.css
@@ -116,8 +116,8 @@
 }
 
 footer {
-    width: 1440px;
-    height: 440px;
+    width: 100%;
+    height: 100%;
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
