--- a/Css/home.css
+++ b/Css/home.css
@@ -20,6 +20,136 @@
     top: 765px;
 }
 
+:root {
+  --movie-width: 24vw;
+  --movie-height: 150px;
+  --slider-py: 200px;
+}
+@media only screen and (max-width: 1000px) {
+  :root {
+    --movie-width: 25vw;
+  }
+}
+
+.saude{
+  font-size: 34px;
+  font-family: roboto;
+  color: #DFEBE6;
+  margin-top: 100px;
+  padding-top:0 auto;
+  position: absolute;
+}
+
+.container {
+  position: relative;
+  padding: 0 auto;
+  margin-top: 800px;
+}
+
+/* THE SLIDER CONTAINER */
+
+.slider {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  white-space: nowrap;
+  position: relative;
+  padding-top: var(--slider-py);
+  padding-bottom: var(--slider-py) 50px;
+  margin-bottom: 100px;
+}
+
+/* SLIDER INDICATORS */
+
+.container-indicators {
+  width: 100px;
+  position: absolute;
+  right: 0;
+  top: calc(var(--slider-py) - 60px);
+  visibility: hidden;
+}
+
+.indicator {
+  width: 15px;
+  height: 2px;
+  background-color: grey;
+  display: inline-block;
+}
+
+.indicator.active {
+  background-color: white;
+}
+
+/* photo ELEMENTS!*/
+
+.movie {
+  width: var(--movie-width);
+  height: var(--movie-height);
+  display: inline-block;
+  position: relative;
+  color: white;
+  padding: 0 2px;
+  font-size: 0.8rem;
+  transition: all 0.8s ease-in-out;
+}
+
+.movie:nth-of-type(1) {
+  margin-left: var(--arrow-width);
+}
+
+.movie img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+@media only screen and (min-width: 900px) {
+  .movie:hover {
+    transform: scale(1.3);
+    z-index: 2;
+  }
+
+/*BUTTONS*/
+
+.btn-nav {
+  width: var(--arrow-width);
+  height: var(--movie-height);
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  outline: none;
+  border: none;
+  color: white;
+  top: var(--slider-py);
+  z-index: 5;
+  visibility: hidden;
+}
+
+#moveLeft {
+  left: 0;
+  cursor: pointer;
+}
+
+#moveRight {
+  right: 0;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 900px) {
+  .btn-nav {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  .container:hover .btn-nav,
+  .container:hover .container-indicators {
+    visibility: visible;
+  }
+}
+
 .Sobre{
     position: absolute;
     width: 1200px;
