--- a/Css/home.css
+++ b/Css/home.css
@@ -166,9 +166,9 @@
 .sobrementalix{
     position: absolute;
     width: 997px;
-    height: 42px;
+    height: 163px;
     left: 120px;
-    top: 2780px;
+    top: 2577px;
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -182,7 +182,6 @@
     height: 42px;
     left: 120px;
     top: 2780px;
-
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
@@ -386,9 +385,10 @@
     width: 110%;
 }
 
+
 .botaocategorias{
     position: absolute;
-    width: 480px;
+    width: 450px;
     height: 70px;
     top: 2280px;
     display: inline-block;
@@ -440,12 +440,13 @@
 }
 
 .botaoajuda { 
+    position: absolute;
     width: 386px;
     height: 71px;
     left: 527px;
     top: 4149px;
     display: inline-block;
-    margin: 50px 395px 130px 50px;
+    margin: 13px 12px 13px 0px;
     cursor: pointer;
     border-radius: 4px;
     font-size: 40px;
@@ -460,8 +461,8 @@
     width: 794px;
     height: 45px;
     left: 323px;
-    top: 4149px;
-    font-family: Roboto;
+    top: 4055px;
+    /**font-family: Roboto;*/
     font-style: normal;
     font-weight: 500;
     font-size: 34px;
@@ -471,14 +472,14 @@
 
 footer {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 1440px;
+    height: 440px;
     left: 0px;
     top: 4292px;    
     text-align: center;
     background-color: #1d1e1a;
     padding: 40px 0;
-    margin-top: 400px;
+   
 }
 
 .links {
