--- a/Css/home.css
+++ b/Css/home.css
@@ -462,7 +462,7 @@
     height: 45px;
     left: 323px;
     top: 4055px;
-    /**font-family: Roboto;*/
+    font-family: Roboto;
     font-style: normal;
     font-weight: 500;
     font-size: 34px;
