--- a/Css/home.css
+++ b/Css/home.css
@@ -392,7 +392,7 @@
     height: 70px;
     top: 2280px;
     display: inline-block;
-    margin: 13px 3px 13px 405px;
+    margin: 13px 3px 13px 450px;
     cursor: pointer;
     border-radius: 4px;
     font-size: 40px;
@@ -446,7 +446,7 @@
     left: 527px;
     top: 4149px;
     display: inline-block;
-    margin: 13px 12px 13px 0px;
+    margin: 13px 12px 13px 50px;
     cursor: pointer;
     border-radius: 4px;
     font-size: 40px;
@@ -472,9 +472,8 @@
 
 footer {
     position: absolute;
-    width: 1440px;
-    height: 440px;
-    left: 0px;
+    width: 100%;
+    height: 100%;  
     top: 4292px;    
     text-align: center;
     background-color: #1d1e1a;
